--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <div class="home">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                      <a class="nav-link active" data-toggle="tab" href="#description">Tab1</a>
+                      <a class="home nav-link active" data-toggle="tab" href="#description">Tab1</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" data-toggle="tab" href="#characteristics">Tab2</a>
+                      <a class="home nav-link" data-toggle="tab" href="#characteristics">Tab2</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" data-toggle="tab" href="#opinion">Tab3</a>
+                      <a class="home nav-link" data-toggle="tab" href="#opinion">Tab3</a>
                     </li>
                   </ul>
                   <div class="tab-content">
