Radius angles on tabs

--- a/index.html
+++ b/index.html
@@ -29,24 +29,18 @@
 </head>
 
 <body>
-    <!-- <canvas class="canvas" id="myCanvas" tabindex=1 resize style="border: 0px solid;
-        user-select: none;
-        touch-action: auto;
-        -webkit-user-drag: none;
-        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-    </canvas> -->
     <div class="row">
         <div class="col-10">
             <div class="home">
-                <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                      <a class="home nav-link active" data-toggle="tab" href="#description">Tab1</a>
+                <ul class="nav nav-tabs bg-dark" style="padding-left: 8px; padding-top: 8px;">
+                    <li class="tab1 mr-1">
+                      <a class="tabText nav-link active" data-toggle="tab" href="#description">Tab1</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="home nav-link" data-toggle="tab" href="#characteristics">Tab2</a>
+                    <li class="tab2 mr-1">
+                      <a class="tabText nav-link" data-toggle="tab" href="#characteristics">Tab2</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="home nav-link" data-toggle="tab" href="#opinion">Tab3</a>
+                    <li class="tab3">
+                      <a class="tabText nav-link" data-toggle="tab" href="#opinion">Tab3</a>
                     </li>
                   </ul>
                   <div class="tab-content">
