--- a/index.html
+++ b/index.html
@@ -30,25 +30,28 @@
 
 <body>
     <div class="row">
-        <div class="col-10">
+        <div class="col-10 pr-0">
             <div class="home">
                 <ul class="nav nav-tabs bg-dark" style="padding-left: 8px; padding-top: 8px;">
                     <li class="tab1 mr-1">
-                      <a class="tabText nav-link active" data-toggle="tab" href="#description">Tab1</a>
+                      <a class="tabText nav-link border-0 active" data-toggle="tab" href="#description">Tab1</a>
                     </li>
                     <li class="tab2 mr-1">
-                      <a class="tabText nav-link" data-toggle="tab" href="#characteristics">Tab2</a>
+                      <a class="tabText nav-link border-0" data-toggle="tab" href="#characteristics">Tab2</a>
                     </li>
                     <li class="tab3">
-                      <a class="tabText nav-link" data-toggle="tab" href="#opinion">Tab3</a>
+                      <a class="tabText nav-link border-0" data-toggle="tab" href="#opinion">Tab3</a>
                     </li>
                   </ul>
                   <div class="tab-content">
                     <div class="tab-pane fade show active" id="description">
+                        Tab1
                     </div>
                     <div class="tab-pane fade" id="characteristics">
+                        Tab2
                     </div>
                     <div class="tab-pane fade" id="opinion">
+                        Tab3
                     </div>
                   </div>
             </div>
