--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     <div class="row">
         <div class="col-10 pr-0">
             <div class="home">
-                <ul class="nav nav-tabs bg-dark" style="padding-left: 8px; padding-top: 8px;">
-                    <li class="tab1 mr-1">
-                      <a class="tabText nav-link border-0 active" data-toggle="tab" href="#description">Tab1</a>
+                <ul class="nav nav-tabs bg-dark border-0" style="padding-left: 8px; padding-top: 8px;">
+                    <li class="tab1">
+                      <a class="tabText nav-link border-bottom-0 border active" data-toggle="tab" href="#description">Tab1</a>
                     </li>
-                    <li class="tab2 mr-1">
-                      <a class="tabText nav-link border-0" data-toggle="tab" href="#characteristics">Tab2</a>
+                    <li class="tab2">
+                      <a class="tabText nav-link border-bottom-0 border" data-toggle="tab" href="#characteristics" style="margin-left: -1px;">Tab2</a>
                     </li>
                     <li class="tab3">
-                      <a class="tabText nav-link border-0" data-toggle="tab" href="#opinion">Tab3</a>
+                      <a class="tabText nav-link border-bottom-0 border" data-toggle="tab" href="#opinion" style="margin-left: -1px;">Tab3</a>
                     </li>
                   </ul>
                   <div class="tab-content">
