--- a/index.html
+++ b/index.html
@@ -135,11 +135,17 @@
                                 </div>
                                 <div class="d-flex flex-row justify-content-between ml-3 mr-3">
                                     <p>Align</p>
-                                    <div class="btn-group btn-group-sm h-25 w-50" role="group">
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-1-map-aligin-left-no-bordure.svg"></button>
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-1-map-aligin-center-no-bordure.svg"></button>
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-1-map-aligin-right-no-bordure.svg"></button>
-                                    </div>
+                                    <div class="btn-group btn-group-toggle h-25 w-50" data-toggle="buttons">
+                                        <label class="btn btn-light btn-sm border p-0 active">
+                                          <input type="radio" name="options" id="option1" checked><img src="img/Menu4-1-map-aligin-left-no-bordure.svg">
+                                        </label>
+                                        <label class="btn btn-light btn-sm border p-0">
+                                          <input type="radio" name="options" id="option2"> <img src="img/Menu4-1-map-aligin-center-no-bordure.svg">
+                                        </label>
+                                        <label class="btn btn-light btn-sm border p-0">
+                                          <input type="radio" name="options" id="option3"> <img src="img/Menu4-1-map-aligin-right-no-bordure.svg">
+                                        </label>
+                                      </div>
                                 </div>
                                 <div class="d-flex flex-row justify-content-between ml-3 mr-3">
                                     <p>Theme</p>
@@ -202,10 +208,6 @@
                                 <div class="d-flex flex-row justify-content-between ml-3">
                                     <p>Radius</p>
                                     <p>
-                                        <!-- <a style="text-decoration: underline;">5</a>
-                                        <a style="text-decoration: underline;">6</a>
-                                        <a style="text-decoration: underline;">5</a>
-                                        <a style="text-decoration: underline;">3</a> -->
                                         <input id="number" class="form-control-sm w-50 float-right mr-3" min="0" type="number" value="6">
                                     </p>
                                 </div>
@@ -246,8 +248,6 @@
                                 <div class="d-flex flex-row justify-content-between ml-3 mr-3 mt-3">
                                     <p>Size</p>
                                     <p>
-                                        <!-- <a style="text-decoration: underline;">1600</a>
-                                        <a style="text-decoration: underline;">1600</a> -->
                                         <div class="form-group row">
                                             <input id="number" class="form-control-sm w-25 ml-auto" min="0" type="number" value="1600">
                                             <p class="mt-1 mr-1 ml-1">X</p>
@@ -257,10 +257,16 @@
                                 </div>
                                 <div class="d-flex flex-row justify-content-between ml-3 mr-3">
                                     <p>Align</p>
-                                    <div class="btn-group btn-group-sm h-25 w-50" role="group">
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-4-image-aligin-left-no-bordure.svg"></button>
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-4-image-aligin-center-no-bordure.svg"></button>
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-4-image-aligin-right-no-bordure.svg"></button>
+                                    <div class="btn-group btn-group-toggle h-25 w-50" data-toggle="buttons">
+                                        <label class="btn btn-light btn-sm border p-0 active">
+                                          <input type="radio" name="options" id="option1" checked><img src="img/Menu4-4-image-aligin-left-no-bordure.svg">
+                                        </label>
+                                        <label class="btn btn-light btn-sm border p-0">
+                                          <input type="radio" name="options" id="option2"> <img src="img/Menu4-4-image-aligin-center-no-bordure.svg">
+                                        </label>
+                                        <label class="btn btn-light btn-sm border p-0">
+                                          <input type="radio" name="options" id="option3"> <img src="img/Menu4-4-image-aligin-right-no-bordure.svg">
+                                        </label>
                                     </div>
                                 </div>
                             </div>
@@ -289,26 +295,44 @@
                                 </div>
                                 <div class="d-flex flex-row justify-content-between ml-3 mr-3">
                                     <p>Align g.</p>
-                                    <div class="btn-group btn-group-sm h-25 w-50" role="group">
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-5-text-aligin-left-no-bordure.svg"></button>
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-5-text-aligin-center-no-bordure.svg"></button>
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-5-text-aligin-right-no-bordure.svg"></button>
+                                    <div class="btn-group btn-group-toggle h-25 w-50" data-toggle="buttons">
+                                        <label class="btn btn-light btn-sm border p-0 active">
+                                          <input type="radio" name="options" id="option1" checked> <img src="img/Menu4-5-text-aligin-left-no-bordure.svg">
+                                        </label>
+                                        <label class="btn btn-light btn-sm border p-0">
+                                          <input type="radio" name="options" id="option2"> <img src="img/Menu4-5-text-aligin-center-no-bordure.svg">
+                                        </label>
+                                        <label class="btn btn-light btn-sm border p-0">
+                                          <input type="radio" name="options" id="option3"> <img src="img/Menu4-5-text-aligin-right-no-bordure.svg">
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="d-flex flex-row justify-content-between ml-3 mr-3">
                                     <p>Align h.</p>
-                                    <div class="btn-group btn-group-sm h-25 w-50" role="group">
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-5-text-aligin-bott-no-bordure.svg"></button>
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-5-text-aligin-mid-no-bordure.svg"></button>
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-5-text-aligin-top-no-bordure.svg"></button>
+                                    <div class="btn-group btn-group-toggle h-25 w-50" data-toggle="buttons">
+                                        <label class="btn btn-light btn-sm border p-0 active">
+                                          <input type="radio" name="options" id="option1" checked> <img src="img/Menu4-5-text-aligin-bott-no-bordure.svg">
+                                        </label>
+                                        <label class="btn btn-light btn-sm border p-0">
+                                          <input type="radio" name="options" id="option2"> <img src="img/Menu4-5-text-aligin-mid-no-bordure.svg">
+                                        </label>
+                                        <label class="btn btn-light btn-sm border p-0">
+                                          <input type="radio" name="options" id="option3"> <img src="img/Menu4-5-text-aligin-top-no-bordure.svg">
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="d-flex flex-row justify-content-between ml-3 mr-3">
                                     <p>Type</p>
-                                    <div class="btn-group btn-group-sm h-25 w-50" role="group">
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-5-text-bold-no-bordure.svg"></button>
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-5-text-italic-no-bordure.svg"></button>
-                                        <button type="button" class="btn btn-light btn-sm border p-0"><img src="img/Menu4-5-text-underline-no-bordure.svg"></button>
+                                    <div class="btn-group btn-group-toggle h-25 w-50" data-toggle="buttons">
+                                        <label class="btn btn-light btn-sm border p-0 active">
+                                          <input type="radio" name="options" id="option1" checked> <img src="img/Menu4-5-text-bold-no-bordure.svg">
+                                        </label>
+                                        <label class="btn btn-light btn-sm border p-0">
+                                          <input type="radio" name="options" id="option2"> <img src="img/Menu4-5-text-italic-no-bordure.svg">
+                                        </label>
+                                        <label class="btn btn-light btn-sm border p-0">
+                                          <input type="radio" name="options" id="option3"> <img src="img/Menu4-5-text-underline-no-bordure.svg">
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="d-flex flex-row justify-content-between ml-3 mr-3">
