--- a/index.html
+++ b/index.html
@@ -10,22 +10,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        ! function(o, c) {
-            var n = c.documentElement,
-                t = " w-mod-";
-            n.className += t + "js",
-                ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
-        }(window, document);
-    </script>
-
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/paper-full.js"></script>
-    <script type="text/javascript" src="js/st_core/core_obj.js"></script>
-    <script type="text/javascript" src="test_data.js"></script>
-    <script type="text/javascript" src="js/st_core/utils.js"></script>
-    <script type="text/javascript" src="mmcore.js"></script>
-
 </head>
 
 <body>
@@ -87,25 +71,25 @@
         </div>
         <div class="menu4" style="margin-right: 30px;">
             <h4 class="lead text-dark">Style</h4>
-            <div class="card">
-                <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <div class="card border-0">
+                <ul class="nav nav-tabs border-0" id="myTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link p-0 active" id="home-tab" data-toggle="tab" href="#one" role="tab" aria-controls="home" aria-selected="true"><img src="img/Menu4-1-map-no-bordure.svg"></a>
+                        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#one" role="tab" aria-controls="home" aria-selected="true" style="padding: 4px 8px;"><img src="img/Menu4-1-map-no-bordure.svg"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-0" id="profile-tab" data-toggle="tab" href="#two" role="tab" aria-controls="profile" aria-selected="false"><img src="img/Menu4-2-cell-no-bordure.svg"></a>
+                        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#two" role="tab" aria-controls="profile" aria-selected="false" style="padding: 4px 8px;"><img src="img/Menu4-2-cell-no-bordure.svg"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-0" id="contact-tab" data-toggle="tab" href="#three" role="tab" aria-controls="contact" aria-selected="false"><img src="img/Menu4-3-join-no-bordure.svg"></a>
+                        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#three" role="tab" aria-controls="contact" aria-selected="false" style="padding: 4px 8px;"><img src="img/Menu4-3-join-no-bordure.svg"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-0" id="contact-tab" data-toggle="tab" href="#four" role="tab" aria-controls="contact" aria-selected="false"><img src="img/Menu4-4-image-no-bordure.svg"></a>
+                        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#four" role="tab" aria-controls="contact" aria-selected="false" style="padding: 4px 8px;"><img src="img/Menu4-4-image-no-bordure.svg"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link p-0" id="contact-tab" data-toggle="tab" href="#five" role="tab" aria-controls="contact" aria-selected="false"><img src="img/Menu4-5-text-no-bordure.svg"></a>
+                        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#five" role="tab" aria-controls="contact" aria-selected="false" style="padding: 4px 8px;"><img src="img/Menu4-5-text-no-bordure.svg"></a>
                     </li>
                 </ul>
-                <div class="tab-content" id="myTabContent">
+                <div class="tab-content border" id="myTabContent">
                     <div class="tab-pane fade show active" id="one" role="tabpanel" aria-labelledby="home-tab">
                         <div class="d-flex flex-row justify-content-between ml-3 mr-3 mt-3">
                             <p>Color</p>
