--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         </div>
                         <div class="d-flex flex-row justify-content-between ml-3 mr-3">
                             <p>Font</p>
-                            <select class="form-control-sm">
+                            <select class="form-control-sm" id="fontSelect">
                                 <option class="Times-New-Roman" value="Times-New-Roman">Times New Roman</option>
                                 <option class="Verdana" value="Verdana">Verdana</option>
                                 <option value="Comic-Sans-MS">Comic Sans MS</option>
