border bottom navs update

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="home">
         <nav>
             <div class="nav nav-tabs bg-dark pl-3 pt-3" id="nav-tab" role="tablist">
-              <a class="homeTab nav-item nav-link bg-white mr-1 active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
-              <a class="homeTab nav-item nav-link bg-white mr-1" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</a>
+              <a class="homeTab nav-item nav-link bg-white active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true" style="margin-right: .25rem;">Home</a>
+              <a class="homeTab nav-item nav-link bg-white" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false" style="margin-right: .25rem;">Profile</a>
               <a class="homeTab nav-item nav-link bg-white" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</a>
             </div>
           </nav>
