--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="js/scripts.js" type="script"></script>
@@ -37,8 +37,14 @@
                 <button type="button" class="btn btn-light border btn-sm"><img src="img/Menu1-shareno-bordure.svg"></button>
                 <button type="button" class="btn btn-light border btn-sm"><img src="img/Menu1-saveno-bordure.svg" alt="" id="exportToFile"></button>
                 <button type="button" class="btn btn-light border btn-sm"><img src="img/Menu1-loadno-bordure.svg" alt="" id="importFromFile"></button>
-                <button type="button" class="btn btn-light border btn-sm"><img src="img/Menu1-infono-bordure.svg" alt=""></button>
+                <button type="button" id="infoBtn" class="btn btn-light border btn-sm"><img src="img/Menu1-infono-bordure.svg" alt=""></button>
             </div>
+        </div>
+        <div id="menu1Info" style="margin: 30px; display: none;">
+            <p>Info about project</p>
+            <p>Last changes: 15:22, 03.11.2020</p>
+            <p>Date of creation: 11.11.2020</p>
+            <p>Author: test@test.com</p>
         </div>
         <div class="menu2" style="margin-right: 30px;">
             <h4 class="lead text-dark">Tools</h4>
@@ -391,9 +397,7 @@
         console.log($(this).val());
     });
 
-    $('#Tab1').dblclick(function(){   
-        // $('#Tab1').css('padding', '3px');
-        // $('#Tab1').html('<input class="form-control">');
+    $('#Tab1').dblclick(function(){
         $('#Tab1').replaceWith('<input class="homeTab nav-item nav-link bg-white active" id="Tab1" data-toggle="tab" href="#nav-tab1" role="tab" aria-controls="nav-tab1" aria-selected="true" style="margin-right: .25rem;">')
         $('#Tab1').keydown(function(e) {
             if(e.keyCode === 13) {
@@ -404,6 +408,42 @@
             }
         });
     });
+
+    $('#Tab2').dblclick(function(){
+        $('#Tab2').replaceWith('<input class="homeTab nav-item nav-link bg-white active" id="Tab2" data-toggle="tab" href="#nav-tab2" role="tab" aria-controls="nav-tab2" aria-selected="false" style="margin-right: .25rem;">')
+        $('#Tab2').keydown(function(e) {
+            if(e.keyCode === 13) {
+                //console.log($(this).val());
+                var text = $(this).val();
+                $('#Tab2').replaceWith('<a class="homeTab nav-item nav-link bg-white active" id="Tab2" data-toggle="tab" href="#nav-tab2" role="tab" aria-controls="nav-tab2" aria-selected="false" style="margin-right: .25rem;"></a>')
+                $('#Tab2').text(text);
+            }
+        });
+    });
+
+    $('#Tab3').dblclick(function(){
+        $('#Tab3').replaceWith('<input class="homeTab nav-item nav-link bg-white active" id="Tab3" data-toggle="tab" href="#nav-tab3" role="tab" aria-controls="nav-tab3" aria-selected="false">')
+        $('#Tab3').keydown(function(e) {
+            if(e.keyCode === 13) {
+                //console.log($(this).val());
+                var text = $(this).val();
+                $('#Tab3').replaceWith('<a class="homeTab nav-item nav-link bg-white active" id="Tab3" data-toggle="tab" href="#nav-tab3" role="tab" aria-controls="nav-tab3" aria-selected="false"></a>')
+                $('#Tab3').text(text);
+            }
+        });
+    });
+
+    $('#infoBtn').click(function(){
+        if ($('#menu1Info').css('display') == 'none') 
+        {
+            $('#menu1Info').animate({height: 'show'}, 500); 
+        }
+        else 
+        {     
+            $('#menu1Info').animate({height: 'hide'}, 500); 
+        }
+    });
+
     });
     </script>
 </body>
