show/hide animation final fix

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                 </button>
             </div>
             <p>Give rights</p>
-            <input type="email" class="form-control form-control-md w-75" placeholder="test@test.com"/>
+            <input type="email" class="form-control form-control-md w-75 mb-4" placeholder="test@test.com"/>
         </div>
         <div id="menu1Info" style="margin-left: 30px; display: none;">
             <p>Info about project</p>
             <p>Last changes: 15:22, 03.11.2020</p>
             <p>Date of creation: 11.11.2020</p>
-            <p class="mb-0">Author: test@test.com</p>
+            <p>Author: test@test.com</p>
         </div>
         <div class="menu2" style="margin-right: 30px;">
             <h4 class="lead text-dark">Tools</h4>
