--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
                     <p class="m-0" style="font-size: 13px;">06.12.2020</p>
                 </div>
             </div>
+            <div class="row mb-4">
+                <div class="col-sm">
+                    <button type="button" class="btn btn-light font-weight-bold mr-2" style="font-size: 13px;">Open all project</button>
+                    <button type="button" class="btn btn-light font-weight-bold ml-2" style="font-size: 13px;">Upload all project</button>
+                </div>
+            </div>
         </div>
         <div id="menu1Info" style="margin-left: 30px; display: none;">
             <p>Info about project</p>
