--- a/index.html
+++ b/index.html
@@ -447,5 +447,6 @@
             </div>
         </div>
         <script src="js/main.js" type="text/javascript"></script>
+        <script src="js/map.js" type="text/javascript"></script>
 </body>
 </html>
